kitsune/sumo/static/sumo/less/wiki.less
/* ... */
article {
  #unhelpful-survey {
    margin: 15px 0 0 20px;
    position: absolute;
    right: 0;
    top: 0;
    width: 300px;

    textarea {
      height: 65px;
      margin: 6px 0 2px 12px;
      resize: vertical;
      width: 275px;
    }

    &:after {
      background: #fff;
      box-shadow: -2px 2px 2px rgba(0,0,0,0.3);
      content: '';
      display: block;
      height: 10px;
      left: -5px;
      position: absolute;
      top: 15px;
      transform: rotate(45deg);
      width: 10px;
      z-index: 1;
    }
  }
}

#unhelpful-survey {
  background: #fff;
  border: solid 1px #ccc;
  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
  display: inline-block;
  z-index: 1;

  p {
    margin: 8px 12px;

    &.sorry {
      font-size: 20px;
    }
  }

  ul {
    list-style: none;
  }

  li {
    color: #fff;
    cursor: pointer;
    padding: 2px 0 2px 12px;
    position: relative;

    input {
      margin: 0 6px 3px 0;
    }

    label {
      font-weight: normal;
      margin: 0;
    }
  }

  .close-button {
    cursor: pointer;
    font-size: 24px;
    position: absolute;
    right: 8px;
    top: 0;

    &:before {
      content: '\00d7';
    }
  }

  .btn-submit {
    margin: 6px 14px;
    float: left;
  }

  .character-counter {
    font-size: 12px;
  }

  .disabled-reason {
    font-size: 12px;
    padding-top: 5px;
  }
}

#doc-watch {
  padding: 20px;
}

/* New Diffs */
.diff-this {
  margin: 15px 0;

  p {
    margin: 0;
  }

  table {
    border: 1px solid #ddd;
    width: 100%;
  }

  .from,
  .to {
    display: none;
  }

  .output {
    color: #333;
    font-size: 13px;
  }

  .fromLine {
    background: #ffdddd;
  }

  .toLine {
    background: #ddffdd;
  }

  .num {
    background: #ececec;
    border-right: 1px solid #ddd;
    color: #aaa;
    padding: 0 4px 0 6px;
    text-align: right;
    width: 15px;
  }

  .mark {
    font-family: Courier;
    padding: 0 6px;
    width: 8px;
  }

  ins {
    background: #aaffaa;
    color: #000;
    text-decoration: none;
  }

  del {
    background: #ffaaaa;
    color: #000;
    text-decoration: none;
  }
}

.document {
  #related-documents {
    padding-left: 80px;

    h4 {
      font-family: @OpenSans;
      font-size: 16px;
      margin: 0;
    }

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      > li {
        font-size: 14px;
        margin-top: 8px;

        > a {
          color: #000;
        }
      }
    }
  }
}

/* Ace syntax custom CSS */
#editor {
  border: 2px solid #F7F7F7;
  border-radius: 5px;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;

  .CodeMirror {
    color: #666;
    font-size: 12px;
    font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
    height: 100%;
  }
}

#editor_wrapper {
  height: 500px;
  margin: 0 0 15px;
  position: relative;
}

.cm-quote {
  background-color: black;
  color: white !important;
}

.cm-variable,
.cm-tag {
  color:  #d98484 !important;
}

.cm-other.cm-link {
  color: #5757c2 !important;
}

.cm-bold {
  color: #000;
  font-weight: normal !important;
}

.cm-strikethrough {
  text-decoration: line-through;
}

.cm-italic {
  font-style: italic;
}

.cm-underline {
  text-decoration: underline;
}

.cm-comment {
  color: #090 !important;
}

.cm-editor .cm-identifier,
.cm-editor .cm-italic,
.cm-editor .cm-underline {
  color: #666666 !important;
}

.wiki-product-title {
  margin-left: 24px;
  position: relative;

  > svg {
    float: left;
    padding-top: 8px;
  }

  > a:link,
    a:visited {
    color: #000;
    float: left;
    font-size: 16px;
    padding-left: 20px;
    padding-top: 6px;
    text-decoration: none;
    width: 110px;
  }
}

#get-involved-box {
  margin-top: 100px;
  text-align: center;

  .btn {
    font-size: 16px;
    margin-bottom: 20px;
    padding: 8px 40px;
  }
}

